--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:yogeechintu.github.io/Portfolio.git",
+  "homepage": "https:yogee-chintu.github.io/Portfolio.git",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
