--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:yogee-chintu.github.io/Port.git",
+ "homepage": "https://yogeechintu.github.io/portfolio",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
